initial schema for a loop construct prototype
Based upon @GlassOfWhiskey 's work in https://github.com/common-workflow-language/common-workflow-language/issues/495#issuecomment-1064343639
With comments from @tetron @mr-c

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -57,6 +57,7 @@ include cwltool/cwlNodeEngineJSConsole.js
 include cwltool/cwlNodeEngineWithContext.js
 include cwltool/extensions.yml
 include cwltool/extensions-v1.1.yml
+include cwltool/extensions-v1.2.yml
 include cwltool/jshint/jshint_wrapper.js
 include cwltool/jshint/jshint.js
 include cwltool/hello.simg
