Added id prefix to loop_source field

--- a/cwltool/extensions-v1.2.yml
+++ b/cwltool/extensions-v1.2.yml
@@ -135,6 +135,9 @@ $graph:
       type:
         - string?
         - string[]?
+      jsonldPredicate:
+        "_type": "@id"
+        refScope: 1
     linkMerge:
       type: cwl:LinkMergeMethod?
       jsonldPredicate: "cwl:linkMerge"
